tests/error/compile/var_meta_invalid_char.wks
# @desc: Meta-variable invalid character
# @expect-error: Variable name contains ')'

# Test meta-variable name contains ')' after resolution
:var "bad" "foo)"
:var "%(bad)" "value"
x "Test" +write %{{echo test}}
